API_Reference_MDX/milvus-restful/v2.4.x/v2/Vector (v2)/Hybrid Search.mdx
---
displayed_sidebar: restfulSidebar
sidebar_positition: 77
slug: /restful/Hybrid Search
title: "Hybrid Search | RESTful"
description: "This operation searches for entities based on vector similarity and scalar filtering and reranks the results using a specified strategy. | RESTful"
hide_table_of_contents: true
sidebar_label: "Hybrid Search"
sidebar_custom_props: { badges: ['post']}
---

# Hybrid Search

import RestSpecs from '@site/src/components/RestSpecs';

<RestSpecs specs={specs} endpoint={endpoint} method={method} target="milvus" lang="en-US" />

export const specs = {"summary":"Hybrid Search","deprecated":false,"description":"This operation searches for entities based on vector similarity and scalar filtering and reranks the results using a specified strategy.","x-i18n":{"zh-CN":{"summary":"Hybrid Search","description":"本接口基于向量相似度和标量过滤条件，搜索实体并使用指定策略重新排序结果。"}},"tags":["Vector Operations (V2)"],"parameters":[{"name":"Request-Timeout","in":"header","description":"The timeout duration for this operation.\nSetting this to None indicates that this operation timeouts when any response arrives or any error occurs.","x-i18n":{"zh-CN":{"description":"当前操作的超时时间。\n设置为 None 表示本操作在任何响应或错误发生时超时。"}},"required":false,"example":0,"schema":{"type":"integer"},"x-include-target":["milvus"]},{"name":"Authorization","in":"header","description":"The authentication token should be <include target=\"zilliz\">an API key with appropriate privileges or </include>a pair of colon-joined username and password, like `username:password`.","required":true,"example":"Bearer {{TOKEN}}","schema":{"type":"string"},"x-i18n":{"zh-CN":{"description":"认证令牌，应为<include target=\"zilliz\">具备适当权限的 API 密钥或</include>用冒号分隔的用户名和密码，如 `username:password`。"}}}],"requestBody":{"content":{"application/json":{"schema":{"type":"object","properties":{"dbName":{"type":"string","description":"The name of the database.","x-i18n":{"zh-CN":{"description":"数据库名称。"}},"x-include-target":["milvus"]},"collectionName":{"type":"string","description":"The name of the collection to which this operation applies.","x-i18n":{"zh-CN":{"description":"Collection 名称。"}}},"partitionNames":{"type":"array","items":{"type":"string","description":"A partition name.","x-i18n":{"zh-CN":{"description":"一个 Partition 名称。"}}},"description":"The name of the partitions to which this operation applies. Setting this parameter indicates that the search is within the specified partitions. Otherwise, the search is across all partitions in the collection.","x-i18n":{"zh-CN":{"description":"Partition 名称列表。设置此参数表示搜索仅限于指定的 Partition。否则，搜索会在 Collection 中搜索所有 Partition。"}}},"search":{"type":"array","items":{"description":"Search parameter for a vector field.","x-i18n":{"zh-CN":{"description":"当前向量字段的检索参数。"}},"type":"object","properties":{"data":{"type":"array","items":{"type":"number","description":"A vector embedding","x-i18n":{"zh-CN":{"description":"一个向量嵌入。"}},"format":"float32"},"description":"A list of vector embeddings.<include target=\"milvus\">Milvus</include><include target=\"zilliz\">Zilliz Cloud</include> searches for the most similar vector embeddings to the specified ones.","x-i18n":{"zh-CN":{"description":"一个向量嵌入列表。<include target=\"milvus\">Milvus</include><include target=\"zilliz\">Zilliz Cloud</include> 会搜索与指定向量嵌入最相似的向量。"}}},"annsField":{"type":"string","description":"The name of the vector field.","x-i18n":{"zh-CN":{"description":"向量字段名称。"}}},"filter":{"type":"string","description":"A boolean expression filter.","x-i18n":{"zh-CN":{"description":"标量过滤条件。"}}},"groupingField":{"type":"string","description":"The name of the field that serve as the aggregation criteria.","x-i18n":{"zh-CN":{"description":"用于分组聚合的字段名称。"}}},"metricType":{"type":"string","description":"The name of the metric type that applies to the current search. The value should be the same as the metric type of the target collection.","x-i18n":{"zh-CN":{"description":"当前搜索所使用的度量类型。该值应与目标 Collection 的度量类型相同。"}},"enum":["L2","IP","COSINE"],"default":"COSINE"},"limit":{"type":"integer","description":"The number of entities to return.","x-i18n":{"zh-CN":{"description":"需要返回的 Entity 数量。"}}},"offset":{"type":"integer","description":"The number of entities to skip in the returned entities.","x-i18n":{"zh-CN":{"description":"需要在搜索结果中跳过的 Entity 数量。"}}},"ignoreGrowing":{"type":"boolean","description":"Whether to ignore the entities found in the growing segments.","x-i18n":{"zh-CN":{"description":"搜索时是否需要忽略 Growing Segment 中的 Entity。"}}},"params":{"description":"Extra search parameters.","type":"object","properties":{"radius":{"type":"integer","description":"Determines the threshold of least similarity. When setting metric_type to L2, ensure that this value is greater than that of range_filter. Otherwise, this value should be lower than that of range_filter. ","x-i18n":{"zh-CN":{"description":"确定最不相似向量的阈值。当设置 metric_type 为 L2 时，请确保该值大于 range_filter 的值。否则，该值应小于 range_filter 的值。"}}},"range_filter":{"type":"integer","description":"Refines the search to vectors within a specific similarity range. When setting metric_type to IP or COSINE, ensure that this value is greater than that of radius. Otherwise, this value should be lower than that of radius. ","x-i18n":{"zh-CN":{"description":"优化搜索结果的相似度范围。当设置 metric_type 为 IP 或 COSINE 时，请确保该值大于 radius 的值。否则，该值应小于 radius 的值。"}}}}}},"required":["data","annsField","filter","groupingField","limit","offset","ignoreGrowing"]},"description":"The search parameters","x-i18n":{"zh-CN":{"description":"搜索参数。"}}},"rerank":{"type":"object","properties":{"strategy":{"type":"string","description":"The name of the reranking strategy.","x-i18n":{"zh-CN":{"description":"重新排序策略。"}},"enum":["rrf","ws"]},"params":{"type":"object","properties":{"k":{"type":"integer","description":"A tunable constant in the RRF algorithm. This applies only when the strategy is set to `rrf`.","x-i18n":{"zh-CN":{"description":"可调节常数。仅当策略设置为 `rrf` 时适用。"}}}},"description":"A set of parameters related to the specified strategy","x-i18n":{"zh-CN":{"description":"指定重新排序策略的参数。"}},"required":["k"]}},"description":"The reranking strategy.","x-i18n":{"zh-CN":{"description":"重新排序策略。"}},"required":["params"]},"limit":{"type":"integer","description":"The total number of entities to return.\nYou can use this parameter in combination with **offset** in **param** to enable pagination.\nThe sum of this value and **offset** in **param** should be less than 16,384. ","x-i18n":{"zh-CN":{"description":"需要返回的 Entity 总数。\n您可以使用此参数与 **param** 中的 **offset** 结合使用，实现分页。\n此值与 **param** 中的 **offset** 之和应小于 16,384。"}}},"outputFields":{"type":"array","items":{"type":"string","description":"A field name","x-i18n":{"zh-CN":{"description":"字段名称"}}},"description":"An array of fields to return along with the search results.","x-i18n":{"zh-CN":{"description":"搜索结果中需要包含的字段列表。"}}}},"required":["collectionName","search"]},"example":{"collectionName":"test_collection","search":[{"data":[[0.673437956701697,0.739243747672878]],"annsField":"float_vector_1","limit":10,"outputFields":["*"]},{"data":[[0.075384179256879,0.9971545645073111]],"annsField":"float_vector_2","limit":10,"outputFields":["*"]}],"rerank":{"strategy":"rrf","params":{"k":10}},"limit":3,"outputFields":["user_id","word_count","book_describe"]}}}},"responses":{"200":{"description":"Returns the search results.","x-i18n":{"zh-CN":{"description":"返回搜索结果。"}},"content":{"application/json":{"schema":{"anyOf":[{"x-tab-label":"success","type":"object","properties":{"code":{"type":"integer","description":"Response code.","x-i18n":{"zh-CN":{"description":"响应码。"}}},"data":{"type":"array","description":"Search results","x-i18n":{"zh-CN":{"description":"搜索结果。"}},"items":{"type":"object","description":"An entity object.","x-i18n":{"zh-CN":{"descripiton":"一个返回的 Entity 对象。"}},"properties":{}}}}},{"x-tab-label":"failure","description":"Returns an error message.","x-i18n":{"zh-CN":{"description":"返回错误消息。"}},"x-i18n-langs":["zh-CN"],"type":"object","properties":{"code":{"type":"integer","description":"Response code.","x-i18n":{"zh-CN":{"description":"响应码。"}}},"message":{"type":"string","description":"Error message.","x-i18n":{"zh-CN":{"description":"错误描述。"}}}}}]},"examples":{"1":{"summary":"success","x-target-response":"OPTION 1","value":{"code":0,"cost":0,"data":[{"book_describe":"book_105","distance":0.09090909,"id":450519760774180800,"user_id":5,"word_count":105},{"book_describe":"book_246","distance":0.09090909,"id":450519760774180900,"user_id":46,"word_count":246},{"book_describe":"book_367","distance":0.08333333600000001,"id":450519760774181060,"user_id":67,"word_count":367}]}},"2":{"summary":"failure","x-target-response":"OPTION 2","value":{"code":0,"message":"The token is illegal."}}}}}}},"security":[]}
export const endpoint = "/v2/vectordb/entities/hybrid_search"
export const method = "post"
