API_Reference_MDX/milvus-restful/v3.0.x/v2/Vector (v2)/Hybrid Search.mdx
---
displayed_sidebar: restfulSidebar
sidebar_positition: 5
slug: /restful/Hybrid Search
beta: FALSE
title: "Hybrid Search | RESTful"
description: "This operation searches for entities based on vector similarity and scalar filtering and reranks the results using a specified strategy. | RESTful"
hide_table_of_contents: true
sidebar_label: "Hybrid Search"
sidebar_custom_props:
  badges:
    - "post"
keywords: 
  - zilliz cloud
  - zilliz
  - cloud
  - "Hybrid Search"
  - "post"
  - RESTful
  - API
---

# Hybrid Search

import RestSpecs from '@site/src/components/RestSpecs';

<RestSpecs specs={specs} endpoint={endpoint} method={method} target="milvus" lang="en-US" />

export const specs = {"summary":"Hybrid Search","deprecated":false,"description":"This operation searches for entities based on vector similarity and scalar filtering and reranks the results using a specified strategy.","x-i18n":{"zh-CN":{"summary":"Hybrid Search","description":"本接口基于向量相似度和标量过滤条件，搜索实体并使用指定策略重新排序结果。"},"ja-JP":{"summary":"ハイブリッド検索","description":"この操作は、ベクトル類似性とスカラー フィルタリングに基づいてエンティティを検索し、指定された戦略を使用して結果を再ランキングします。"}},"tags":["Vector Operations (V2)"],"x-base-urls":[{"key":"cluster","label":"Cluster Endpoint","url":"https://{cluster-id}.{region}.vectordb.zillizcloud.com:19530","prompt":"Use the cluster endpoint if you are using serving clusters.\n<ul><li><p><b>Free & Serverless</b></p><p><code>https://{cluster-id}.serverless.{region}.vectordb.zillizcloud.com</code></p></li><li><p><b>Dedicated</b></p><p><code>https://{cluster-id}.{region}.vectordb.zillizcloud.com:19530</code></p></li></ul>","x-i18n":{"zh-CN":{"label":"集群端点","prompt":"如果您使用的是服务集群，请使用集群端点。\n<ul><li><p><b>Free 与 Serverless 版</b></p><p><code>https://{cluster-id}.serverless.{region}.vectordb.zillizcloud.com</code></p></li><li><p><b>Dedicated 版</b></p><p><code>https://{cluster-id}.{region}.vectordb.zillizcloud.com:19530</code></p></li></ul>"},"ja-JP":{"label":"クラスターエンドポイント","prompt":"サービングクラスターを使用している場合は、クラスターエンドポイントを使用してください。\n<ul><li><p><b>Free & Serverless</b></p><p><code>https://{cluster-id}.serverless.{region}.vectordb.zillizcloud.com</code></p></li><li><p><b>Dedicated</b></p><p><code>https://{cluster-id}.{region}.vectordb.zillizcloud.com:19530</code></p></li></ul>"}},"shell":"export CLUSTER_ENDPOINT=\"https://{cluster-id}.{region}.vectordb.zillizcloud.com:19530\""},{"key":"on-demand-compute","label":"Project Endpoint (On-Demand)","url":"https://{project-id}.{region}.api.zillizcloud.com","prompt":"<p>Use the on-demand compute endpoint if you are using on-demand clusters.</p><p><code>https://{project-id}.{region}.api.zillizcloud.com</code></p>","x-i18n":{"zh-CN":{"label":"项目端点（按需）","prompt":"<p>如果您使用的是按需集群，请使用项目端点（按需）。</p><p><code>https://{project-id}.{region}.api.zillizcloud.com</code></p>"},"ja-JP":{"label":"プロジェクトエンドポイント（オンデマンド）","prompt":"<p>オンデマンドクラスターを使用している場合は、オンデマンドコンピュートエンドポイントを使用してください。</p><p><code>https://{project-id}.{region}.api.zillizcloud.com</code></p>"}},"shell":"export PROJECT_ENDPOINT=\"https://{project-id}.{region}.api.zillizcloud.com\""}],"parameters":[{"name":"Authorization","in":"header","description":"The authentication token should be <include target=\"zilliz\">an API key with appropriate privileges or </include>a pair of colon-joined username and password, like `username:password`. If you are using a project endpoint, only a valid API key with sufficient permissions applies.","required":true,"example":"Bearer {{TOKEN}}","schema":{"type":"string","x-added-at":"2.6.x","x-last-modified":"2.6.x","x-deprecated-since":null},"x-i18n":{"zh-CN":{"description":"认证令牌，应为<include target=\"zilliz\">具备适当权限的 API 密钥或</include>用冒号分隔的用户名和密码，如 `username:password`。"},"ja-JP":{"description":"認証トークンは、<include target=\"zilliz\">適切な権限を持つ API key、または </include>`username:password` のようにコロンで連結されたユーザー名とパスワードの組み合わせである必要があります。project endpoint を使用している場合は、十分な権限を持つ有効な API key のみが適用されます。"}},"x-added-at":"2.6.x","x-last-modified":"2.6.x","x-deprecated-since":null},{"name":"clusterId","in":"query","description":"The ID of the on-demand cluster that this operation will be performed on. This parameter applies only when you use an on-demand compute endpoint.","required":true,"schema":{"type":"string","x-added-at":"2.6.x","x-last-modified":"2.6.x","x-deprecated-since":null},"example":"inxx-xxxxxxxxxxxxxxxxx","x-i18n":{"zh-CN":{"description":"按需集群 ID，此操作将在该集群上执行。此参数仅在使用项目端点（按需）时适用。"},"ja-JP":{"description":"この操作の実行対象となる on-demand cluster の ID です。このパラメータは、on-demand compute endpoint を使用する場合にのみ適用されます。"}},"x-include-target":["zilliz"],"x-base-url-target":["on-demand-compute"],"x-added-at":"2.6.x","x-last-modified":"2.6.x","x-deprecated-since":null}],"requestBody":{"content":{"application/json":{"schema":{"type":"object","properties":{"dbName":{"type":"string","description":"The name of the database.","x-i18n":{"zh-CN":{"description":"数据库名称。"},"ja-JP":{"description":"データベースの名前。"}},"x-added-at":"2.6.x","x-last-modified":"2.6.x","x-deprecated-since":null},"collectionName":{"type":"string","description":"The name of the collection to which this operation applies.","x-i18n":{"zh-CN":{"description":"Collection 名称。"},"ja-JP":{"description":"この操作が適用されるコレクションの名前。"}},"x-added-at":"2.6.x","x-last-modified":"2.6.x","x-deprecated-since":null},"partitionNames":{"type":"array","items":{"type":"string","description":"A partition name.","x-i18n":{"zh-CN":{"description":"一个 Partition 名称。"},"ja-JP":{"description":"パーティション名。"}},"x-added-at":"2.6.x","x-last-modified":"2.6.x","x-deprecated-since":null},"description":"The name of the partitions to which this operation applies. Setting this parameter indicates that the search is within the specified partitions. Otherwise, the search is across all partitions in the collection.","x-i18n":{"zh-CN":{"description":"Partition 名称列表。设置此参数表示搜索仅限于指定的 Partition。否则，搜索会在 Collection 中搜索所有 Partition。"},"ja-JP":{"description":"この操作が適用されるパーティションの名前です。このパラメータを設定すると、検索は指定されたパーティション内で実行されます。それ以外の場合、検索はコレクション内のすべてのパーティションを対象に実行されます。"}},"x-added-at":"2.6.x","x-last-modified":"2.6.x","x-deprecated-since":null},"search":{"type":"array","items":{"description":"Search parameter for a vector field.","x-i18n":{"zh-CN":{"description":"当前向量字段的检索参数。"},"ja-JP":{"description":"ベクトル フィールドの検索パラメータ。"}},"type":"object","properties":{"data":{"type":"array","items":{"type":"number","description":"A vector embedding","x-i18n":{"zh-CN":{"description":"一个向量嵌入。"},"ja-JP":{"description":"ベクトル埋め込み"}},"format":"float32","x-added-at":"2.6.x","x-last-modified":"2.6.x","x-deprecated-since":null},"description":"A list of vector embeddings.<include target=\"milvus\">Milvus</include><include target=\"zilliz\">Zilliz Cloud</include> searches for the most similar vector embeddings to the specified ones.","x-i18n":{"zh-CN":{"description":"一个向量嵌入列表。<include target=\"milvus\">Milvus</include><include target=\"zilliz\">Zilliz Cloud</include> 会搜索与指定向量嵌入最相似的向量。"},"ja-JP":{"description":"ベクトル埋め込みのリスト。<include target=\"milvus\">Milvus</include><include target=\"zilliz\">Zilliz Cloud</include> は、指定されたベクトル埋め込みに最も類似したベクトル埋め込みを検索します。"}},"x-added-at":"2.6.x","x-last-modified":"2.6.x","x-deprecated-since":null},"annsField":{"type":"string","description":"The name of the vector field.","x-i18n":{"zh-CN":{"description":"向量字段名称。"},"ja-JP":{"description":"ベクトル フィールドの名前。"}},"x-added-at":"2.6.x","x-last-modified":"2.6.x","x-deprecated-since":null},"filter":{"type":"string","description":"A boolean expression filter.","x-i18n":{"zh-CN":{"description":"标量过滤条件。"},"ja-JP":{"description":"ブール式フィルタ。"}},"x-added-at":"2.6.x","x-last-modified":"2.6.x","x-deprecated-since":null},"groupingField":{"type":"string","description":"The name of the field that serve as the aggregation criteria.","x-i18n":{"zh-CN":{"description":"用于分组聚合的字段名称。"},"ja-JP":{"description":"集計条件として機能するフィールドの名前。"}},"x-added-at":"2.6.x","x-last-modified":"2.6.x","x-deprecated-since":null},"metricType":{"type":"string","description":"The name of the metric type that applies to the current search. The value should be the same as the metric type of the target collection.","x-i18n":{"zh-CN":{"description":"当前搜索所使用的度量类型。该值应与目标 Collection 的度量类型相同。"},"ja-JP":{"description":"現在の検索に適用されるメトリック タイプの名前です。値は対象コレクションのメトリック タイプと同じである必要があります。"}},"enum":["L2","IP","COSINE"],"default":"COSINE","x-added-at":"2.6.x","x-last-modified":"2.6.x","x-deprecated-since":null},"limit":{"type":"integer","description":"The number of entities to return.","x-i18n":{"zh-CN":{"description":"需要返回的 Entity 数量。"},"ja-JP":{"description":"返されるエンティティの数。"}},"x-added-at":"2.6.x","x-last-modified":"2.6.x","x-deprecated-since":null},"offset":{"type":"integer","description":"The number of entities to skip in the returned entities.","x-i18n":{"zh-CN":{"description":"需要在搜索结果中跳过的 Entity 数量。"},"ja-JP":{"description":"返されるエンティティからスキップするエンティティ数。"}},"x-added-at":"2.6.x","x-last-modified":"2.6.x","x-deprecated-since":null},"ignoreGrowing":{"type":"boolean","description":"Whether to ignore the entities found in the growing segments.","x-i18n":{"zh-CN":{"description":"搜索时是否需要忽略 Growing Segment 中的 Entity。"},"ja-JP":{"description":"growing segments で見つかったエンティティを無視するかどうか。"}},"x-added-at":"2.6.x","x-last-modified":"2.6.x","x-deprecated-since":null},"params":{"description":"Extra search parameters.","type":"object","properties":{"radius":{"type":"number","format":"float64","description":"Determines the threshold of least similarity. When setting metric_type to L2, ensure that this value is greater than that of range_filter. Otherwise, this value should be lower than that of range_filter. ","x-i18n":{"zh-CN":{"description":"确定最不相似向量的阈值。当设置 metric_type 为 L2 时，请确保该值大于 range_filter 的值。否则，该值应小于 range_filter 的值。"},"ja-JP":{"description":"最小類似度のしきい値を決定します。metric_type を L2 に設定する場合、この値が range_filter の値より大きいことを確認してください。それ以外の場合、この値は range_filter の値より小さい必要があります。 "}},"x-added-at":"2.6.x","x-last-modified":"2.6.x","x-deprecated-since":null},"range_filter":{"type":"number","format":"float64","description":"Refines the search to vectors within a specific similarity range. When setting metric_type to IP or COSINE, ensure that this value is greater than that of radius. Otherwise, this value should be lower than that of radius. ","x-i18n":{"zh-CN":{"description":"优化搜索结果的相似度范围。当设置 metric_type 为 IP 或 COSINE 时，请确保该值大于 radius 的值。否则，该值应小于 radius 的值。"},"ja-JP":{"description":"特定の類似度範囲内のベクトルに検索を絞り込みます。metric_type を IP または COSINE に設定する場合、この値が radius の値より大きいことを確認してください。それ以外の場合、この値は radius の値より小さい必要があります。 "}},"x-added-at":"2.6.x","x-last-modified":"2.6.x","x-deprecated-since":null}},"x-added-at":"2.6.x","x-last-modified":"2.6.x","x-deprecated-since":null,"x-i18n":{"zh-CN":{"description":"额外的搜索参数。"},"ja-JP":{"description":"追加の検索パラメータ。"}}},"exprParams":{"type":"object","description":"Expression template parameter values for parameterized filter expressions.","x-added-at":"2.6.x","x-last-modified":"2.6.x","x-deprecated-since":null,"x-i18n":{"zh-CN":{"description":"参数化过滤表达式中使用的表达式模板参数值。"},"ja-JP":{"description":"パラメータ化されたフィルタ式用の式テンプレート パラメータ値。"}}}},"required":["data","annsField","filter","groupingField","limit","offset","ignoreGrowing"],"x-added-at":"2.6.x","x-last-modified":"2.6.x","x-deprecated-since":null},"description":"The search parameters","x-i18n":{"zh-CN":{"description":"搜索参数。"},"ja-JP":{"description":"検索パラメータ"}},"x-added-at":"2.6.x","x-last-modified":"2.6.x","x-deprecated-since":null},"rerank":{"type":"object","properties":{"strategy":{"type":"string","description":"The name of the reranking strategy.","x-i18n":{"zh-CN":{"description":"重新排序策略。"},"ja-JP":{"description":"再ランキング戦略の名前。"}},"enum":["rrf","weighted"],"x-added-at":"2.6.x","x-last-modified":"2.6.x","x-deprecated-since":null},"params":{"type":"object","properties":{"k":{"type":"integer","description":"A tunable constant in the RRF algorithm. This applies only when the strategy is set to `rrf`.","x-i18n":{"zh-CN":{"description":"可调节常数。仅当策略设置为 `rrf` 时适用。"},"ja-JP":{"description":"RRF アルゴリズムにおける調整可能な定数です。これは strategy が `rrf` に設定されている場合にのみ適用されます。"}},"x-added-at":"2.6.x","x-last-modified":"2.6.x","x-deprecated-since":null}},"description":"A set of parameters related to the specified strategy","x-i18n":{"zh-CN":{"description":"指定重新排序策略的参数。"},"ja-JP":{"description":"指定された戦略に関連するパラメータのセット"}},"required":["k"],"x-added-at":"2.6.x","x-last-modified":"2.6.x","x-deprecated-since":null}},"description":"The reranking strategy.","x-i18n":{"zh-CN":{"description":"重新排序策略。"},"ja-JP":{"description":"再ランキング戦略。"}},"required":["params"],"x-added-at":"2.6.x","x-last-modified":"2.6.x","x-deprecated-since":null},"limit":{"type":"integer","description":"The total number of entities to return.\nYou can use this parameter in combination with **offset** in **param** to enable pagination.\nThe sum of this value and **offset** in **param** should be less than 16,384. ","x-i18n":{"zh-CN":{"description":"需要返回的 Entity 总数。\n您可以使用此参数与 **param** 中的 **offset** 结合使用，实现分页。\n此值与 **param** 中的 **offset** 之和应小于 16,384。"},"ja-JP":{"description":"返されるエンティティの総数。\nページネーションを有効にするには、このパラメータを **param** 内の **offset** と組み合わせて使用できます。\nこの値と **param** 内の **offset** の合計は 16,384 未満である必要があります。 "}},"x-added-at":"2.6.x","x-last-modified":"2.6.x","x-deprecated-since":null},"groupSize":{"type":"integer","description":"The number of entities to return for each group. This parameter is only valid when `groupingField` is specified.","x-i18n":{"zh-CN":{"description":"每个组返回的 Entity 数量。该参数仅在 `groupingField` 被指定时有效。"},"ja-JP":{"description":"各グループについて返されるエンティティの数。このパラメータは `groupingField` が指定されている場合にのみ有効です。"}},"x-added-at":"2.6.x","x-last-modified":"2.6.x","x-deprecated-since":null},"strictGroupSize":{"type":"boolean","description":"Whether to return only the top k entities for each group. This parameter is only valid when `groupingField` is specified.","x-i18n":{"zh-CN":{"description":"是否仅返回每个组的前 k 个 Entity。该参数仅在 `groupingField` 被指定时有效。"},"ja-JP":{"description":"各グループについて top k エンティティのみを返すかどうか。このパラメータは `groupingField` が指定されている場合にのみ有効です。"}},"x-added-at":"2.6.x","x-last-modified":"2.6.x","x-deprecated-since":null},"outputFields":{"type":"array","items":{"type":"string","description":"A field name","x-i18n":{"zh-CN":{"description":"字段名称"},"ja-JP":{"description":"フィールド名"}},"x-added-at":"2.6.x","x-last-modified":"2.6.x","x-deprecated-since":null},"description":"An array of fields to return along with the search results.","x-i18n":{"zh-CN":{"description":"搜索结果中需要包含的字段列表。"},"ja-JP":{"description":"検索結果とともに返すフィールドの配列。"}},"x-added-at":"2.6.x","x-last-modified":"2.6.x","x-deprecated-since":null},"consistencyLevel":{"type":"string","description":"The consistency level of the search operation. The value should be the same as the consistency level of the target collection.","x-i18n":{"zh-CN":{"description":"当前搜索操作的一致性级别。"},"ja-JP":{"description":"検索操作の整合性レベル。値は対象コレクションの整合性レベルと同じである必要があります。"}},"enum":["Strong","Eventually","<include target=\"milvus\">Session</include>","Bounded"],"default":"Bounded","x-added-at":"2.6.x","x-last-modified":"2.6.x","x-deprecated-since":null},"functionScore":{"type":"object","description":"Function settings for the current search request.","x-i18n":{"zh-CN":{"description":"当前搜索请求的 Function 设置。"},"ja-JP":{"description":"現在の検索リクエストの関数設定。"}},"properties":{"name":{"type":"string","description":"The name of the function to apply.","x-i18n":{"zh-CN":{"description":"待应用的 Function 名称。"},"ja-JP":{"description":"適用する関数の名前。"}},"x-added-at":"2.6.x","x-last-modified":"2.6.x","x-deprecated-since":null},"description":{"type":"string","description":"The description of the function to apply.","x-i18n":{"zh-CN":{"description":"待应用的 Function 描述。"},"ja-JP":{"description":"適用する関数の説明。"}},"x-added-at":"2.6.x","x-last-modified":"2.6.x","x-deprecated-since":null},"type":{"type":"string","description":"The type of the function to apply.","x-i18n":{"zh-CN":{"description":"待应用的 Function 类型。"},"ja-JP":{"description":"適用する関数のタイプ。"}},"enum":["BM25","TEXTEMBEDDING","RERANK"],"x-added-at":"2.6.x","x-last-modified":"2.6.x","x-deprecated-since":null},"inputFieldNames":{"type":"array","description":"A list of scalar fields to use as input for the function.","x-i18n":{"zh-CN":{"description":"作为 Function 输入的标量字段名称列表。"},"ja-JP":{"description":"関数への入力として使用するスカラー フィールドのリスト。"}},"items":{"type":"string","description":"A scalar field to use as input for the function.","x-i18n":{"zh-CN":{"description":"作为 Function 输入的一个标量字段名称。"},"ja-JP":{"description":"関数への入力として使用するスカラー フィールド。"}},"x-added-at":"2.6.x","x-last-modified":"2.6.x","x-deprecated-since":null},"x-added-at":"2.6.x","x-last-modified":"2.6.x","x-deprecated-since":null},"outputFieldNames":{"type":"array","description":"A list of vector fields to use as output for the function.","x-i18n":{"zh-CN":{"description":"作为 Function 输出的向量字段名称列表。"},"ja-JP":{"description":"関数の出力として使用するベクトル フィールドのリスト。"}},"items":{"type":"string","description":"A vector field to use as output for the function.","x-i18n":{"zh-CN":{"description":"作为 Function 输出的一个向量字段名称。"},"ja-JP":{"description":"関数の出力として使用するベクトル フィールド。"}},"x-added-at":"2.6.x","x-last-modified":"2.6.x","x-deprecated-since":null},"x-added-at":"2.6.x","x-last-modified":"2.6.x","x-deprecated-since":null},"params":{"type":"object","description":"Extra parameters for the function in key-value pairs.","x-i18n":{"zh-CN":{"description":"Function 附加参数，以键值对形式提供。"},"ja-JP":{"description":"関数用の追加パラメータ（キーと値のペア）。"}},"x-added-at":"2.6.x","x-last-modified":"2.6.x","x-deprecated-since":null}},"x-added-at":"2.6.x","x-last-modified":"2.6.x","x-deprecated-since":null},"offset":{"type":"integer","description":"Number of records to skip in the search results.","x-added-at":"2.6.x","x-last-modified":"2.6.x","x-deprecated-since":null,"x-i18n":{"zh-CN":{"description":"搜索结果中需要跳过的记录数。"},"ja-JP":{"description":"検索結果でスキップするレコード数。"}}},"groupingField":{"type":"string","description":"Name of the field to group search results by.","x-added-at":"2.6.x","x-last-modified":"2.6.x","x-deprecated-since":null,"x-i18n":{"zh-CN":{"description":"用于对搜索结果进行分组的字段名称。"},"ja-JP":{"description":"検索結果をグループ化する対象のフィールド名。"}}}},"required":["collectionName","search"],"x-added-at":"2.6.x","x-last-modified":"2.6.x","x-deprecated-since":null},"example":{"collectionName":"test_collection","search":[{"data":[[0.673437956701697,0.739243747672878]],"annsField":"float_vector_1","limit":10,"outputFields":["*"]},{"data":[[0.075384179256879,0.9971545645073111]],"annsField":"float_vector_2","limit":10,"outputFields":["*"]}],"rerank":{"strategy":"rrf","params":{"k":10}},"limit":3,"outputFields":["user_id","word_count","book_describe"]}}},"x-added-at":"2.6.x","x-last-modified":"2.6.x","x-deprecated-since":null},"responses":{"200":{"description":"Returns the search results.","x-i18n":{"zh-CN":{"description":"返回搜索结果。"},"ja-JP":{"description":"検索結果を返します。"}},"content":{"application/json":{"schema":{"anyOf":[{"x-tab-label":"success","type":"object","properties":{"code":{"type":"integer","description":"Response code.","x-i18n":{"zh-CN":{"description":"响应码。"},"ja-JP":{"description":"レスポンスコード。"}},"x-added-at":"2.6.x","x-last-modified":"2.6.x","x-deprecated-since":null},"cost":{"type":"integer","description":"Cost of this operation.<include target=\"zilliz\"> This applies to free and serverless clusters only, indicating the vCU usage of the current request.</include>","x-i18n":{"zh-CN":{"description":"当前操作的花费。<include target=\"zilliz\">仅用于 Free 和 Serverless 集群，表示当前操作消耗的 vCU。</include>"},"ja-JP":{"description":"この操作のコスト。<include target=\"zilliz\"> これは free および serverless clusters にのみ適用され、現在のリクエストの vCU 使用量を示します。</include>"}},"x-added-at":"2.6.x","x-last-modified":"2.6.x","x-deprecated-since":null},"data":{"type":"array","description":"Search results","x-i18n":{"zh-CN":{"description":"搜索结果。"},"ja-JP":{"description":"検索結果"}},"items":{"type":"object","description":"An entity object.","x-i18n":{"zh-CN":{"description":"一个返回的 Entity 对象。"},"ja-JP":{"description":"エンティティ オブジェクト。"}},"properties":{},"x-added-at":"2.6.x","x-last-modified":"2.6.x","x-deprecated-since":null},"x-added-at":"2.6.x","x-last-modified":"2.6.x","x-deprecated-since":null},"topks":{"type":"array","description":"The number of top-K results returned for each query vector.","x-i18n":{"zh-CN":{"description":"每个查询向量返回的 Top-K 结果数量。"},"ja-JP":{"description":"各クエリ ベクトルに対して返される top-K 結果の数。"}},"items":{"type":"integer","x-added-at":"2.6.x","x-last-modified":"2.6.x","x-deprecated-since":null},"x-added-at":"2.6.x","x-last-modified":"2.6.x","x-deprecated-since":null},"scanned_remote_bytes":{"type":"integer","description":"Returned when the deployment uses tiered storage with usage tracking enabled and the operation reads from remote/disk storage. Omitted when all data is served from local cache.","x-i18n":{"zh-CN":{"description":"当部署使用 Tiered Storage 且已启用用量跟踪，并且操作从远程/磁盘存储读取数据时返回。当所有数据均从本地缓存提供时，此字段将被省略。"},"ja-JP":{"description":"デプロイメントが usage tracking を有効にした tiered storage を使用しており、操作が remote/disk storage から読み取る場合に返されます。すべてのデータが local cache から提供される場合は省略されます。"}},"x-added-at":"2.6.x","x-last-modified":"2.6.x","x-deprecated-since":null},"scanned_total_bytes":{"type":"integer","description":"Returned when the deployment uses tiered storage with usage tracking enabled and the operation reads from remote/disk storage. Omitted when all data is served from local cache.","x-i18n":{"zh-CN":{"description":"当部署使用 Tiered Storage 且已启用用量跟踪，并且操作从远程/磁盘存储读取数据时返回。当所有数据均从本地缓存提供时，此字段将被省略。"},"ja-JP":{"description":"デプロイメントが usage tracking を有効にした tiered storage を使用しており、操作が remote/disk storage から読み取る場合に返されます。すべてのデータが local cache から提供される場合は省略されます。"}},"x-added-at":"2.6.x","x-last-modified":"2.6.x","x-deprecated-since":null},"cache_hit_ratio":{"type":"number","description":"Returned when the deployment uses tiered storage with usage tracking enabled and the operation reads from remote/disk storage. Omitted when all data is served from local cache.","x-i18n":{"zh-CN":{"description":"当部署使用 Tiered Storage 且已启用用量跟踪，并且操作从远程/磁盘存储读取数据时返回。当所有数据均从本地缓存提供时，此字段将被省略。"},"ja-JP":{"description":"デプロイメントが usage tracking を有効にした tiered storage を使用しており、操作が remote/disk storage から読み取る場合に返されます。すべてのデータが local cache から提供される場合は省略されます。"}},"x-added-at":"2.6.x","x-last-modified":"2.6.x","x-deprecated-since":null}},"x-added-at":"2.6.x","x-last-modified":"2.6.x","x-deprecated-since":null},{"x-tab-label":"failure","description":"Returns an error message.","x-i18n":{"zh-CN":{"description":"返回错误消息。"},"ja-JP":{"description":"エラーメッセージを返します。"}},"x-i18n-langs":["zh-CN"],"type":"object","properties":{"code":{"type":"integer","description":"Response code.","x-i18n":{"zh-CN":{"description":"响应码。"},"ja-JP":{"description":"レスポンスコード。"}},"x-added-at":"2.6.x","x-last-modified":"2.6.x","x-deprecated-since":null},"message":{"type":"string","description":"Error message.","x-i18n":{"zh-CN":{"description":"错误描述。"},"ja-JP":{"description":"エラーメッセージ。"}},"x-added-at":"2.6.x","x-last-modified":"2.6.x","x-deprecated-since":null}},"x-added-at":"2.6.x","x-last-modified":"2.6.x","x-deprecated-since":null}],"x-added-at":"2.6.x","x-last-modified":"2.6.x","x-deprecated-since":null},"examples":{"1":{"summary":"success","x-target-response":"OPTION 1","value":{"code":0,"cost":0,"data":[{"book_describe":"book_105","distance":0.09090909,"id":450519760774180800,"user_id":5,"word_count":105},{"book_describe":"book_246","distance":0.09090909,"id":450519760774180900,"user_id":46,"word_count":246},{"book_describe":"book_367","distance":0.08333333600000001,"id":450519760774181060,"user_id":67,"word_count":367}]}},"2":{"summary":"failure","x-target-response":"OPTION 2","value":{"code":1800,"message":"User hasn't authenticated"}}}}},"x-added-at":"2.6.x","x-last-modified":"2.6.x","x-deprecated-since":null}},"security":[],"x-added-at":"2.6.x","x-last-modified":"2.6.x","x-deprecated-since":null}
export const endpoint = "/v2/vectordb/entities/hybrid_search"
export const method = "post"
